# gtest

./: Makefile  lib_math.c  lib_math.h  main.c  memo.txt
gtest/: CMakeLists.txt  Makefile  liblibmath_test.cpp
mock/: Makefile  main_bind.c  main_ioctl.c  main_sendto.c  main_trace.c  mock_bind.c  mock_bind.h  mock_functions.c  mock_functions.h  mock_ioctl.c  mock_ioctl.h  mock_sendto.c  mock_sendto.h  mock_trace.c  mock_trace.h
